--- a/index.html
+++ b/index.html
@@ -35,17 +35,17 @@
         </div>
         <ul id='ull'>
             <li>
-                <input class="determine" type="checkbox">
+                <input class="determine" id='determine' type="checkbox">
                 <div>我是例子</div>
                 <button class="cancel">取消</button>
             </li>
             <li>
-                <input class="determine" type="checkbox">
+                <input class="determine" id='determine' type="checkbox">
                 <div>我是例子2</div>
                 <button class="cancel">取消</button>
             </li>
             <li>
-                <input class="determine" type="checkbox">
+                <input class="determine" id='determine' type="checkbox">
                 <div>我是例子3</div>
                 <button class="cancel">取消</button>
             </li>
@@ -53,13 +53,28 @@
 
 
 
-
-
-
         <div class="RE_member re_MemBER">
             <span>已完成</span>
             <span><i class="my-icon el-icon-arrow-right">2</i></span>
         </div>
+
+
+        <ul id='ulr'>
+            <li>
+                <input class="determine" id='determine' type="checkbox">
+                <div>我是例子4</div>
+                <span></span>
+            </li>
+            <li>
+                <input class="determine" id='determine' type="checkbox">
+                <div>我是例子5</div>
+                <span></span>
+
+            </li>
+
+        </ul>
+
+
         <div class="RE_member re_MemBER">
             <span>已取消</span>
             <span><i class="my-icon el-icon-arrow-right">3</i></span>
